Add a GUI to set settings, made all settings per-dimension based. Added a center-point system, and a particle visual indicator.

--- a/BedrockWorldBorder_BP/manifest.json
+++ b/BedrockWorldBorder_BP/manifest.json
@@ -30,6 +30,10 @@
         {
             "module_name": "@minecraft/server",
             "version": "2.1.0-beta"
+        },
+        {
+            "module_name": "@minecraft/server-ui",
+            "version": "2.1.0-beta"
         }
     ]
 }
